--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.4",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.9.2",
     "nodemon": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
